Switch to Vue single file components

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,5 +15,5 @@ $nav-tabs-link-active-bg: $light;
 
 
 // Imports
-@import "../node_modules/bootstrap/scss/bootstrap";
+@import "../../node_modules/bootstrap/scss/bootstrap";
 @import "calendar";
